CI: test with modern truffleruby
Latest truffleruby is at 33 now: https://github.com/truffleruby/truffleruby/releases/tag/graal-33.0.1

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -112,8 +112,7 @@ jobs:
           - '4.0'
           - jruby-9.4
           - jruby-10.0
-          - truffleruby-24
-          - truffleruby-25
+          - truffleruby
         os:
           - ubuntu-24.04
         gemfile:
